# sedona-spatialbench

./: .gitignore  404.html  README.md  benchmark-requirements.txt  index.html  mkdocs.yml  print_queries.py  runner.py  spatial_polars.py
.github/: copilot-instructions.md
.github/workflows/: build-docs.yml  packaging.yml  test-generate-data-script.yml
benchmark/: __init__.py  engine_base.py  query_provider.py  reporting.py
benchmark/engines/: __init__.py  databricks_engine.py  duckdb_engine.py  geopandas_engine.py  polars_engine.py  sedona_engine.py  sedonadb_engine.py
benchmark/tests/: __init__.py  test_duckdb_engine.py  test_engine_base.py  test_engine_registry.py  test_query_provider.py  test_reporting.py  test_runner_cli.py  test_sedonadb_engine.py
ci/scripts/: build-docs.sh  build-source.sh  set_dev_version.py
contributors-guide/: index.html
datasets-generators/: index.html
dev/release/: README.md  check-rat-report.py  rat_exclude_files.txt  verify-release-candidate.sh
docs/: queries.md  single-node-benchmarks.md
docs/stylesheets/: extra.css
overview-methodology/: index.html
queries/: index.html
quickstart/: index.html
search/: search_index.json
single-node-benchmarks/: index.html
spatialbench/: Cargo.toml
spatialbench-arrow/: Cargo.toml
spatialbench-arrow/src/: building.rs  customer.rs  driver.rs  trip.rs  vehicle.rs
spatialbench-arrow/tests/: reparse.rs
spatialbench-cli/: Cargo.toml
spatialbench-cli/src/: main.rs  plan.rs  runner.rs  zone_df.rs
spatialbench-distributions/: index.html
tools/: generate_data.py
(+9 files in other folders)
